--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,8 @@
 
 
   --font-roboto: 'Roboto', sans-serif;
+  --font-inter: 'Inter', sans-serif;
+  --font-katibeh: 'Katibeh', serif;
 }
 
 button {
