--- a/styles/desktop/section1.css
+++ b/styles/desktop/section1.css
@@ -1,76 +1,10 @@
 @charset "utf-8";
 
 
-
-.header,
-.header-nav,
-.header-nav ul,
-.section-one,
-.div-info-one {
-  align-items: center;
-  display: flex;
-}
-.header, .header-nav {
-  gap: 70px;
-}
-
-.header-nav-responsive, .menu-hamburger {
-  display: none;
-}
-
-.header-nav ul, .header-nav-responsive ul, .nav-button {
-  color: var(--font-color);
-  font-family: var(--font-roboto);
-}
-
-.nav-button, .section-one-button {
-  border: 1px solid var(--font-color);
-  border-radius: 6px;
-  font-weight: 600;
-  height: 44px;
-  transition: 0.3s ease;
-  width: 216.89px;
-}
-.nav-button, .button-two {
-  background-color: transparent;
-}
-
-.button-one, .button-two {
-  color: white;
-}
-.button-one:hover, .button-two:hover {
-  box-shadow: 0 0 10px var(--font-color);
-}
-
-/*  -- HEADER --  */
-
-
-.header {
-  height: 76px;
-  justify-content: center;
-  width: 100%;
-}
-
-.header div svg {
-  width: 84.42px;
-  height: 29.54px;
-}
-
-.header-nav ul {
-  gap: 20px;
-}
-
-
-.nav-button:hover {
-  background-color: var(--font-color);
-  color: white;
-}
-
-
 /* -- SECTION ONE -- */
 
 .section-one {
-  background-image: url('../asserts/bg_img.jpg');
+  background-image: url('../../asserts/bg_img.jpg');
   background-size: cover;
   height: 767px;
   justify-content: space-evenly;
