--- a/styles/desktop/section1.css
+++ b/styles/desktop/section1.css
@@ -33,17 +33,17 @@
 .div-info-two h1 {
   color: white;
   font-family: var(--font-katibeh);
-  font-size: 64px;
+  font-size: 4rem;
   line-height: 44.8px;
   margin-bottom: 10px;
 }
 .div-info-two p {
   color: #E6DDEE;
   font-family: var(--font-inter);
-  font-size: 20px;
+  font-size: 1.2rem;
   line-height: 32px;
   margin-bottom: 20px;
-  font-weight: 400px;
+  font-weight: 400;
 }
 
 .div-info-tree button:nth-child(1) {
