--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,9 @@
 
 :root {
   --font-color: #7E1ECB;
+  --font-color-title-two: #19002E;
+  --font-color-text-p: #0A0E33;
+
 
   --back-color: #240041;
 
