--- a/styles/desktop/others.css
+++ b/styles/desktop/others.css
@@ -1,7 +1,9 @@
 @charset "utf-8";
 
 
-.section-one, .section-two {
+.section-one,
+.section-two,
+.section-tree {
   margin: auto;
   max-width: 1440px;
 }
@@ -12,7 +14,9 @@
 .header-nav ul,
 .section-one,
 .div-info-one,
-.section-two {
+.section-two,
+.section-tree,
+.div-apresentations {
   align-items: center;
   display: flex;
 }
@@ -48,4 +52,36 @@
 }
 .button-one:hover, .button-two:hover {
   box-shadow: 0 0 10px var(--font-color);
+}
+
+
+.section-tree, .div-apresentation {
+  justify-content: center;
+}
+
+.div-apresentation-one,
+.div-apresentation-two {
+  background-color: #F5F6FF;
+  border-radius: 1rem;
+  height: 320px;
+  padding: 25px;
+  transition: transform 0.3s linear;
+  width: 590px;
+}
+.div-apresentation-one h3,
+.div-apresentation-two h3 {
+  font-family: var(--font-katibeh);
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 28px;
+  margin: 10px 0;
+}
+.div-apresentation-one p,
+.div-apresentation-two p {
+  font-size: 1rem;
+  line-height: 25.6px;
+}
+.div-apresentation-one:hover,
+.div-apresentation-two:hover {
+  transform: scale(1.07);
 }
