--- a/styles/desktop/section1.css
+++ b/styles/desktop/section1.css
@@ -25,7 +25,7 @@
 }
 .div-info-one span {
   color: #cda2f0d6;
-  font-family: var(--font-inter);
+  font-family: var(--font-roboto);
   font-weight: 600;
 }
 
@@ -38,7 +38,7 @@
 }
 .div-info-two p {
   color: #E6DDEE;
-  font-family: var(--font-inter);
+  font-family: var(--font-roboto);
   font-size: 1.2rem;
   line-height: 32px;
   margin-bottom: 20px;
