--- a/styles/desktop/section2.css
+++ b/styles/desktop/section2.css
@@ -25,7 +25,7 @@
 }
 .div-project p {
   color: var(--font-color-text-p);
-  font-family: var(--font-inter);
+  font-family: var(--font-roboto);
   font-size: 1rem;
 }
 
