--- a/styles/desktop/section4.css
+++ b/styles/desktop/section4.css
@@ -14,6 +14,9 @@
 
 
 .section-for {
+
+  /* Para aparecer esta seção basta apagar a linha com o comando "display: none" */
+  display: none;
   height: 833px;
   justify-content: center;
 }
