--- a/styles/desktop/header.css
+++ b/styles/desktop/header.css
@@ -14,12 +14,12 @@
   height: 29.54px;
 }
 
-.header-nav ul {
+/* .header-nav ul {
   gap: 20px;
 }
 .header-nav ul li {
   font-size: 1rem;
-}
+} */
 
 
 .nav-button:hover {
