--- a/styles/desktop/footer.css
+++ b/styles/desktop/footer.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 
-.footer-hr, .div-authorship p {
+.footer-hr, .div-authorship p, .footer-nav ul li a {
   color: #F5F6FF;
 }
 
@@ -22,6 +22,14 @@
 .footer-nav ul li {
   color: white;
   font-weight: 600;
+}
+
+.footer-nav ul li a {
+  border-radius: 5px;
+  transition: color 0.3s ease;
+}
+.footer-nav ul li a:hover {
+  color: var(--font-color);
 }
 
 .footer-nav-icons i {
