--- a/styles/desktop/header.css
+++ b/styles/desktop/header.css
@@ -14,13 +14,14 @@
   height: 29.54px;
 }
 
-/* .header-nav ul {
-  gap: 20px;
+.header nav ul li a {
+  border-radius: 5px;
+  transition: background 0.3s ease;
 }
-.header-nav ul li {
-  font-size: 1rem;
-} */
-
+.header nav ul li a:hover {
+  background-color: var(--font-color);
+  color: white;
+}
 
 .nav-button:hover {
   background-color: var(--font-color);
