--- a/styles/desktop/header.css
+++ b/styles/desktop/header.css
@@ -8,9 +8,13 @@
 /*  -- HEADER --  */
 
 .header {
+  background-color: var(--font-color-title-tree);
   height: 4.8rem;
   justify-content: center;
+  position: fixed;
+  top: 0;
   width: 100%;
+  z-index: 10;
 }
 
 .header div svg {
