chore: Melhorias no efeito de scroll dos links internos.

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --font-color: #7E1ECB;
   --font-color-title-two: #19002E;
