--- a/styles/desktop/header.css
+++ b/styles/desktop/header.css
@@ -24,6 +24,7 @@
 
 .header nav ul li a {
   border-radius: 5px;
+  color: var(--font-color);
   transition: background 0.3s ease;
 }
 .header nav ul li a:hover {
